test/extension_test_cases/invalid/structs/structusage.wacc
# structs

# Output:
# #empty#

# Exit:
# 0

# Program:

struct MyType is
char a ;
bool b5 ;
bool b4 ;
bool b3 ;
bool b2 ;
end

struct MyType2 is
int lhs ;
int rhs ;
end

begin
  struct MyType2 i = new MyType2(5, 7) ;
  struct MyType2 ii = new MyType2(i.lhs, 0) ;
  $MyType i2 = new MyType('a', true, true, false, false || true) ;
  int b = i.lhs ;
  b = i.rhs ;
  i2.b5 = 4 ;
  i2.b4 = i.lhsrhs ;
  i2 = i2.b4 ;
  exit 0
end
